# cruster

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  RALPH_AUTO_PROMPT.md  README.md  cliff.toml  knope.toml  ralph-auto.jsonc  ralph-auto.sh  release-plz.toml  rulesync.jsonc
.changeset/: better-shard-distribution.md  cluster-tests-e2e-stability.md  fix-cruster-macros-version-sync.md  fix-shutdown-ordering.md  fix-stale-state-ref.md  optimize-etcd-shutdown.md  rendezvous-hashing.md  singleton-context.md  sql-activity-transactions.md
.github/workflows/: ci.yml  release.yml
.rulesync/rules/: root.md
crates/cruster/: Cargo.toml
crates/cruster-macros/: Cargo.toml
crates/cruster-macros/src/: lib.rs
crates/cruster/migrations/: 0001_create_cluster_tables.sql  0002_add_deliver_at.sql  0003_add_uninterruptible.sql  0004_create_workflow_journal.sql  0005_add_retry_count.sql  0006_add_deliver_at_index.sql  0007_add_uninterruptible_check.sql  0008_drop_text_pattern_ops_index.sql  0009_add_reply_sequence_unique.sql  0010_add_replies_request_exit_index.sql  0011_add_workflow_journal_completed_at.sql  0012_drop_redundant_replies_index.sql  0013_add_retry_count_check.sql  0014_add_last_read.sql  0015_create_workflow_engine_tables.sql  0016_create_sql_activity_test_table.sql
crates/cruster/proto/: cluster.proto
crates/cruster/src/: config.rs  cron.rs  detachment.rs  durable.rs  entity.rs  entity_client.rs  entity_manager.rs  entity_reaper.rs  entity_resource.rs  envelope.rs  error.rs  hash.rs  lib.rs  macro_tests.rs  message.rs  message_storage.rs  metrics.rs  reply.rs  resource_map.rs  runner.rs  runner_health.rs  runner_storage.rs  runners.rs  schema.rs  shard_assigner.rs  sharding.rs  sharding_impl.rs  single_runner.rs  singleton.rs  snowflake.rs  state_guard.rs  testing.rs
crates/cruster/src/storage/: etcd_runner.rs  memory_message.rs  memory_runner.rs  mod.rs  noop_health.rs  noop_runners.rs  sql_message.rs  sql_workflow.rs  sql_workflow_engine.rs
crates/cruster/src/transport/: grpc.rs  mod.rs
crates/cruster/src/types/: entity_address.rs  entity_id.rs  entity_type.rs  machine_id.rs  mod.rs  runner_address.rs  shard_id.rs  singleton_address.rs
crates/cruster/tests/: storage_retry_exhaustion.rs  streaming_replay_ordering.rs
crates/cruster/tests/ui/: activity_public_invalid.rs  activity_public_invalid.stderr  missing_trait_with.rs  missing_trait_with.stderr  persisted_method_requires_serde.rs  persisted_method_requires_serde.stderr  persisted_state_requires_serde.rs  persisted_state_requires_serde.stderr  private_method_not_on_client.rs  private_method_not_on_client.stderr  protected_method_not_on_client.rs  protected_method_not_on_client.stderr  visibility_without_kind.rs  visibility_without_kind.stderr
examples/chess-cluster/: Cargo.toml
examples/chess-cluster/src/: lib.rs  main.rs
examples/chess-cluster/src/chess/: engine.rs  mod.rs
examples/chess-cluster/src/entities/: chess_game.rs  leaderboard.rs  matchmaking.rs  mod.rs  player_session.rs
examples/chess-cluster/src/entities/traits/: auditable.rs  mod.rs
examples/chess-cluster/src/types/: chess.rs  game.rs  mod.rs  player.rs
examples/chess-cluster/tests/: entity_interactions.rs  game_lifecycle.rs
examples/cluster-tests/: Cargo.toml  Dockerfile  Dockerfile.e2e  docker-compose.yml  nginx.conf
examples/cluster-tests/src/: api.rs  main.rs
examples/cluster-tests/src/entities/: activity_test.rs  counter.rs  cross_entity.rs  kv_store.rs  mod.rs  singleton_test.rs  sql_activity_test.rs  timer_test.rs  trait_test.rs  workflow_test.rs
examples/cluster-tests/tests/: e2e.sh  test_activities.sh  test_basic.sh  test_cross_entity.sh  test_persistence.sh  test_shard_topology.sh  test_singleton_failover.sh  test_singletons.sh  test_sql_activity.sh  test_timers.sh  test_traits.sh  test_workflows.sh
examples/cluster-tests/tests/lib/: helpers.sh
rules/: build-commands.md  changesets.md  commit-checklist.md  project-overview.md  rust-development.md  testing.md
specs/: architecture.md  chess-cluster-demo.md  cluster-tests.md  shard-assigment.md
