[workspace]
resolver = "2"
members = [
    "crates/cruster",
    "crates/cruster-macros",
    "examples/chess-cluster",
    "examples/cluster-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
arc-swap = "1"

# Metrics
prometheus = "0.13"

# Testing
proptest = "1.4"

[profile.release]
lto = true
