[workspace]
resolver = "2"
members = [
    "crates/cruster",
    "crates/cruster-macros",
    "examples/chess-cluster",
    "examples/cluster-tests",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Michael Arnaldi <michael.arnaldi@effectful.co>"]
repository = "https://github.com/mikearnaldi/cruster"
homepage = "https://github.com/mikearnaldi/cruster"
keywords = ["distributed", "actor", "cluster", "workflow", "durable"]
categories = ["asynchronous", "network-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
arc-swap = "1"

# Metrics
prometheus = "0.13"

# Testing
proptest = "1.4"

# Faster dev builds: disable debuginfo
[profile.dev]
debug = 0

[profile.release]
lto = true
