[package]
name = "chess-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Distributed chess server demonstrating cruster features"

[[bin]]
name = "chess-cluster"
path = "src/main.rs"

[dependencies]
# Cluster framework
cruster = { path = "../../crates/cruster", features = ["sql"] }

# Chess logic
shakmaty = { version = "0.27", features = ["serde"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Required by cruster macros
async-trait = { workspace = true }
arc-swap = { workspace = true }
rmp-serde = "1"

# Time
chrono = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "tls-rustls", "migrate", "chrono"] }

# Metrics
prometheus = { workspace = true }

# UUID for entity IDs
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
