[package]
name = "cluster-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E2E test runner for cruster features"

[[bin]]
name = "cluster-tests"
path = "src/main.rs"

[dependencies]
# Cluster framework
cruster = { path = "../../crates/cruster", features = ["sql", "etcd"] }

# etcd client
etcd-client = "0.14"

# Web framework
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Required by cruster macros
async-trait = { workspace = true }
arc-swap = { workspace = true }
rmp-serde = "1"

# Concurrency
parking_lot = "0.12"

# Time
chrono = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "tls-rustls", "migrate", "chrono"] }

# Metrics
prometheus = { workspace = true }

# gRPC
tonic = "0.12"

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
